@@ -43,6 +43,8 @@
                     { "name": "bot682", "platform": "ios-simulator-13" },
                     { "name": "bot694", "platform": "ios-simulator-13" },
                     { "name": "bot695", "platform": "ios-simulator-13" },
+                    { "name": "bot667", "platform": "ipados-simulator-13"},
+                    { "name": "bot664", "platform": "ipados-simulator-13"},
 
                     { "name": "bot543", "platform": "win" },
                     { "name": "bot544", "platform": "win" },
@@ -181,13 +183,13 @@
                     {
                       "name": "Apple iOS 13 Simulator Release (Build)", "type": "Build", "builddir": "ios-simulator-13-release",
                       "platform": "ios-simulator-13", "configuration": "release", "architectures": ["x86_64"],
-                      "triggers": ["ios-simulator-13-release-tests-wk2"],
+                      "triggers": ["ios-simulator-13-release-tests-wk2", "ipados-simulator-13-release-tests-wk2"],
                       "slavenames": ["bot677", "bot682"]
                     },
                     {
                       "name": "Apple iOS 13 Simulator Debug (Build)", "type": "Build", "builddir": "ios-simulator-13-debug",
                       "platform": "ios-simulator-13", "configuration": "debug", "architectures": ["x86_64"],
-                      "triggers": ["ios-simulator-13-debug-tests-wk2"],
+                      "triggers": ["ios-simulator-13-debug-tests-wk2", "ipados-simulator-13-debug-tests-wk2"],
                       "slavenames": ["bot694", "bot695"]
                     },
                     {
@@ -201,6 +203,18 @@
                       "platform": "ios-simulator-13", "configuration": "debug", "architectures": ["x86_64"],
                       "additionalArguments": ["--no-retry-failures", "--no-sample-on-timeout"],
                       "slavenames": ["bot653", "bot654"]
+                    },
+                    {
+                      "name": "Apple iPadOS 13 Simulator Release WK2 (Tests)", "type": "TestAllButJSC", "builddir": "ipados-simulator-13-release-tests-wk2",
+                      "platform": "ipados-simulator-13", "configuration": "release", "architectures": ["x86_64"],
+                      "additionalArguments": ["--no-retry-failures"],
+                      "slavenames": ["bot667"]
+                    },
+                    {
+                      "name": "Apple iPadOS 13 Simulator Debug WK2 (Tests)", "type": "TestAllButJSC", "builddir": "ipados-simulator-13-debug-tests-wk2",
+                      "platform": "ipados-simulator-13", "configuration": "debug", "architectures": ["x86_64"],
+                      "additionalArguments": ["--no-retry-failures", "--no-sample-on-timeout"],
+                      "slavenames": ["bot664"]
                     },
                     {
                       "name": "Apple Win 10 Release (Build)", "type": "Build", "builddir": "win10-release",
@@ -427,6 +441,12 @@
                     },
                     { "type": "Triggerable", "name": "ios-simulator-13-debug-tests-wk2",
                       "builderNames": ["Apple iOS 13 Simulator Debug WK2 (Tests)"]
+                    },
+                    { "type": "Triggerable", "name": "ipados-simulator-13-release-tests-wk2",
+                      "builderNames": ["Apple iPadOS 13 Simulator Release WK2 (Tests)"]
+                    },
+                    { "type": "Triggerable", "name": "ipados-simulator-13-debug-tests-wk2",
+                      "builderNames": ["Apple iPadOS 13 Simulator Debug WK2 (Tests)"]
                     },
                     { "type": "Triggerable", "name": "win10-release-tests",
                       "builderNames": ["Apple Win 10 Release (Tests)"]
