@@ -49,9 +49,11 @@ WebKitBuildbot = function()
         }},
         "Apple iOS 13 Release (Build)": {platform: Dashboard.Platform.iOS13Device, debug: false, builder: true, architecture: Buildbot.BuildArchitecture.SixtyFourBit},
         "Apple iOS 13 Simulator Release (Build)": {platform: Dashboard.Platform.iOS13Simulator, debug: false, builder: true, architecture: Buildbot.BuildArchitecture.SixtyFourBit},
-        "Apple iOS 13 Simulator Release WK2 (Tests)": {platform: Dashboard.Platform.iOS13Simulator, debug: false, tester: true, testCategory: Buildbot.TestCategory.WebKit2},
+        "Apple iOS 13 Simulator Release WK2 (Tests)": {platform: Dashboard.Platform.iOS13Simulator, heading:"iOS Release", debug: false, tester: true, testCategory: Buildbot.TestCategory.WebKit2},
         "Apple iOS 13 Simulator Debug (Build)": {platform: Dashboard.Platform.iOS13Simulator, debug: true, builder: true, architecture: Buildbot.BuildArchitecture.SixtyFourBit},
-        "Apple iOS 13 Simulator Debug WK2 (Tests)": {platform: Dashboard.Platform.iOS13Simulator, debug: true, tester: true, testCategory: Buildbot.TestCategory.WebKit2},
+        "Apple iOS 13 Simulator Debug WK2 (Tests)": {platform: Dashboard.Platform.iOS13Simulator, debug: true, heading:"iOS Debug", tester: true, testCategory: Buildbot.TestCategory.WebKit2},
+        "Apple iPadOS 13 Simulator Release WK2 (Tests)": {platform: Dashboard.Platform.iOS13Simulator, heading:"iPadOS Release", debug: false, tester: true, testCategory: Buildbot.TestCategory.WebKit2},
+        "Apple iPadOS 13 Simulator Debug WK2 (Tests)": {platform: Dashboard.Platform.iOS13Simulator, heading:"iPadOS Debug", debug: true, tester: true, testCategory: Buildbot.TestCategory.WebKit2},
         "Apple Win 10 Debug (Build)": {platform: Dashboard.Platform.Windows10, debug: true, builder: true, architecture: Buildbot.BuildArchitecture.ThirtyTwoBit },
         "Apple Win 10 Release (Build)": {platform: Dashboard.Platform.Windows10, builder: true, architecture: Buildbot.BuildArchitecture.ThirtyTwoBit},
         "Apple Win 10 Debug (Tests)": {platform: Dashboard.Platform.Windows10, debug: true, tester: true, testCategory: Buildbot.TestCategory.WebKit1},
