@@ -1,3 +1,15 @@
+2019-09-24  Matt Lewis  <jlewis3@apple.com>
+
+        Bring up queues for iPadOS Simulator Tests
+        https://bugs.webkit.org/show_bug.cgi?id=202151
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js:
+        (WebKitBuildbot):
+        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:
+
 2019-09-24  Kate Cheney  <katherine_cheney@apple.com>
 
         Enable LayoutTests using ResourceLoadStatistics SQLite backend (195420) 
